# product-api/handlers/get.go
@@ -1,10 +1,8 @@
 package handlers
 
 import (
-	"context"
 	"net/http"
 
-	protos "github.com/izumiya/working/currency/protos/currency"
 	"github.com/izumiya/working/product-api/data"
 )
 
@@ -15,16 +13,23 @@ import (
 
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
-	p.l.Info("[DEBUG] get all records")
+	p.l.Debug("get all records")
 
 	rw.Header().Add("Content-Type", "application/json")
 
-	prods := data.GetProducts()
+	cur := r.URL.Query().Get("currency")
 
-	err := prods.ToJSON(rw)
+	prods, err := p.productsDB.GetProducts(cur)
+	if err != nil {
+		rw.WriteHeader(http.StatusInternalServerError)
+		data.ToJSON(&GenericError{Message: err.Error()}, rw)
+		return
+	}
+
+	err = data.ToJSON(prods, rw)
 	if err != nil {
 		// we should never be here but log the error just in case
-		p.l.Error("[ERROR] serializing product", "error", err)
+		p.l.Error("unable to serializing product", "error", err)
 	}
 }
 
@@ -34,13 +39,16 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 //   200: productResponse
 //   404: errorResponse
 
-// ListSingleProduct handles GET requests
-func (p *Products) ListSingleProduct(rw http.ResponseWriter, r *http.Request) {
+// listSingleProduct handles GET requests
+func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
+	rw.Header().Add("Content-Type", "application/json")
+
 	id := getProductID(r)
+	cur := r.URL.Query().Get("currency")
 
-	p.l.Info("[DEBUG] get record id", "id", id)
+	p.l.Debug("get record", "id", id)
 
-	prod, err := data.GetProductByID(id)
+	prod, err := p.productsDB.GetProductByID(id, cur)
 
 	switch err {
 	case nil:
@@ -57,22 +65,6 @@ func (p *Products) ListSingleProduct(rw http.ResponseWriter, r *http.Request) {
 		data.ToJSON(&GenericError{Message: err.Error()}, rw)
 		return
 	}
-
-	// get exchange rate
-	rr := &protos.RateRequest{
-		Base:        protos.Currencies(protos.Currencies_value["EUR"]),
-		Destination: protos.Currencies(protos.Currencies_value["GBP"]),
-	}
-	resp, err := p.cc.GetRate(context.Background(), rr)
-	if err != nil {
-		p.l.Error("error getting new rate", "error", err)
-		data.ToJSON(&GenericError{Message: err.Error()}, rw)
-		return
-	}
-
-	p.l.Info("resp", "response", resp)
-
-	prod.Price = prod.Price * resp.Rate
 
 	err = data.ToJSON(prod, rw)
 	if err != nil {
