# product-api/swagger.yaml
@@ -1,5 +1,15 @@
 basePath: /
+consumes:
+- application/json
 definitions:
+  GenericError:
+    description: GenericError is a generic error message returned by a server
+    properties:
+      message:
+        type: string
+        x-go-name: Message
+    type: object
+    x-go-package: github.com/izumiya/working/product-api/handlers
   Product:
     description: Product defines the structure for an API product
     properties:
@@ -16,7 +26,7 @@ definitions:
         type: string
         x-go-name: Name
       price:
-        format: float
+        format: double
         type: number
         x-go-name: Price
       sku:
@@ -26,15 +36,32 @@ definitions:
     - id
     type: object
     x-go-package: github.com/izumiya/working/product-api/data
+  ValidationError:
+    description: ValidationError is a collection of validation error messages
+    properties:
+      messages:
+        items:
+          type: string
+        type: array
+        x-go-name: Messages
+    type: object
+    x-go-package: github.com/izumiya/working/product-api/handlers
 info:
-  description: Documentaion for Product API
-  title: Product API
+  description: Documentation for Product API
+  title: of Product API
   version: 1.0.0
 paths:
   /products:
     get:
       description: Returns a list of products from the database
       operationId: listProducts
+      parameters:
+      - description: |-
+          Currency used when returning the price of the product,
+          when not specified currency is returned in GBP.
+        in: query
+        name: Currency
+        type: string
       responses:
         "200":
           $ref: '#/responses/productsResponse'
@@ -43,6 +70,15 @@ paths:
     post:
       description: Create a new product
       operationId: createProduct
+      parameters:
+      - description: |-
+          Product data structure to Update or Create.
+          Note: the id field is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
       responses:
         "200":
           $ref: '#/responses/productResponse'
@@ -77,6 +113,12 @@ paths:
       description: Return a list of products from the database
       operationId: listSingleProduct
       parameters:
+      - description: |-
+          Currency used when returning the price of the product,
+          when not specified currency is returned in GBP.
+        in: query
+        name: Currency
+        type: string
       - description: The id of the product for which the operation relates
         format: int64
         in: path
@@ -95,6 +137,14 @@ paths:
       description: Update a product
       operationId: updateProduct
       parameters:
+      - description: |-
+          Product data structure to Update or Create.
+          Note: the id field is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
       - description: The id of the product for which the operation relates
         format: int64
         in: path
@@ -115,17 +165,21 @@ produces:
 - application/json
 responses:
   errorResponse:
-    description: ""
+    description: Generic error message returned as a string
+    schema:
+      $ref: '#/definitions/GenericError'
   errorValidation:
-    description: ""
+    description: Validation errors defined as an array of strings
+    schema:
+      $ref: '#/definitions/ValidationError'
   noContent:
     description: No content is returned by this API endpoint
   productResponse:
-    description: ""
+    description: Data structure representing a single product
     schema:
       $ref: '#/definitions/Product'
   productsResponse:
-    description: A list of products returns in the response
+    description: A list of products
     schema:
       items:
         $ref: '#/definitions/Product'
